# YOLO-Dashboard

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.arm64  README.md  docker-compose.rpi5.yml  docker-compose.yml  test_disconnect.sh  vcpkg.json
config/: default_config.yaml
data/: config.yaml
docs/: api.md  architecture.md  hardware.md
include/yolo_dashboard/: app.h  common.h
include/yolo_dashboard/auth/: auth_manager.h
include/yolo_dashboard/camera/: camera_enumerator.h  camera_manager.h  video_recorder.h
include/yolo_dashboard/config/: config_manager.h
include/yolo_dashboard/hardware/: hardware_detector.h
include/yolo_dashboard/inference/: inference_engine.h  onnx_engine.h
include/yolo_dashboard/metrics/: log_manager.h  metrics_collector.h
include/yolo_dashboard/web/: routes.h  websocket_handler.h
nginx/: nginx.conf
src/: app.cpp  main.cpp
src/auth/: auth_manager.cpp
src/camera/: camera_enumerator_linux.cpp  camera_enumerator_win.cpp  camera_manager.cpp  video_recorder.cpp
src/config/: config_manager.cpp
src/hardware/: hardware_detector.cpp
src/inference/: onnx_engine.cpp
src/metrics/: log_manager.cpp  metrics_collector.cpp
src/web/: routes.cpp  websocket_handler.cpp
web/: index.html
web/css/: style.css
web/js/: app.js  camera.js  config.js  hardware.js  inference.js  metrics.js  recorder.js
